--- a/browser/extension/style.css
+++ b/browser/extension/style.css
@@ -1,5 +1,3 @@
-.tal{ text-align:left } .tac{ text-align:center } .tar{ text-align:right }
-
 	/* global {{{*/
 *	
 	{
@@ -7,12 +5,13 @@
 	font-size: 20px;
 	font-weight: normal;
 	background-color: #000000;
-	color: lightgrey;
+	color: #AAA;
+	caret-color: #FFF;
 	}
 ::selection
 	{
-	background-color: #408000;
-	color: #50D000;
+	background-color: #1a5fb4;
+	color: #FFF;
 	}
 @font-face
 	{
@@ -24,31 +23,51 @@
 	/* form {{{*/
 fieldset
 	{
-		width: min-content;
-		border: solid 1px #888;
+		padding: 4px;
+		margin: 4px;
+		border: solid 1px #444;
+		max-width: calc(598px - 2px - 8px - 8px);
+		width: 100%;
+	}
+legend 
+	{
+		margin: 4px;
+		padding: 0px 7px;
+	}
+label 
+	{
+		display: block;
+		margin: 4px;
+		line-height: 20px;
+		color: #666;
 	}
 input
 	{
-		padding: 5px;
-		width: 320px;
+		padding: 0px;
+		margin: 0px;
+		max-width: 598px;
+		width: 100%;
 		border: none;
-		border-bottom: solid 1px #888;
 		outline: none;
+		border-bottom: solid 1px #666;
 	}
 button
 	{
-		margin: 5px;
-		padding: 5px;
-		border: solid 1px #888;
+		margin: 0px 0px 4px 4px;
+		padding: 3px 10px;
+		border: solid 1px #666;
+		outline: solid 1px #000;
 	}
 button:focus
 	{
-		border: solid 1px #FFF;
-		outline: none;
+		border: solid 1px #DDD;
+		outline: solid 1px #DDD;
 	}
 button:active
 	{
 		background: #FFF;
+		border: solid 1px #FFF;
+		outline: solid 1px #FFF;
 	}
 	/*}}} form */
-	
+
